# Unfolding

./: .gitignore  README.md  SpinObservables.py  foldingDemo.py  generateBinning.ipynb  generateMatrix.ipynb  getHistMeanAndError.ipynb  invertMatrix.ipynb
Frequentist/TRExFitter/: CMakeLists.txt  CONTRIBUTING.md  ChangeLog  CreateHistograms.C  Dockerfile  FitCrossCheckForLimits.C  LICENSE  README.md  bsWeight.C  jobSchema.config  logo.txt  mkdocs.yml  multiFitSchema.config  setup.sh  version.txt
Frequentist/TRExFitter/AtlasUtils/: AtlasLabels.C  AtlasLabels.h  AtlasStyle.C  AtlasUtils.C  AtlasUtils.h
Frequentist/TRExFitter/CommonStatTools/: .clang-format  .gitignore  AsimovDataMaking.C  AsimovDataMaking.h  AsymptoticsCLsRunner.C  AsymptoticsCLsRunner.h  CMakeLists.txt  FitCrossCheckForLimits.C  FitCrossCheckForLimits.h  HistFactoryInspector.C  HistFactoryInspector.h  LinkDef.h  Minimization.C  Minimization.h  README.md  compareHistos.py  getCorrMatrix.C  getGlobalP0.C  getHFtables.C  obtainHistosFromWS.py  runAsymptoticsCLs.C  runAsymptoticsCLs.h  runFitCrossCheckForLimits.C  runSig.C  runSig.h  test.sh
Frequentist/TRExFitter/CommonSystSmoothingTool/: CMakeLists.txt  CommonSmoothingToolConfig.cmake.in  README.md
Frequentist/TRExFitter/CommonSystSmoothingTool/Root/: LinkDef.h  PlotHist.cxx  SmoothHist.cxx  SmoothingTool.cxx  TRExTools.cxx
Frequentist/TRExFitter/CommonSystSmoothingTool/SmoothSystematics/: PlotHist.h  SmoothHist.h  SmoothingTool.h  TRExTools.h
Frequentist/TRExFitter/CommonSystSmoothingTool/doc/: Doxyfile  use_as_library.md
Frequentist/TRExFitter/CommonSystSmoothingTool/doc/html/: LinkDef_8h_source.html  PlotHist_8h_source.html  SmoothHist_8h_source.html  SmoothingTool_8h_source.html  annotated.html  classPlotHist-members.html  classPlotHist.html  classSmoothHist-members.html  classSmoothHist.html  classSmoothingTool-members.html  classSmoothingTool.html  classes.html  files.html  functions.html  functions_func.html  index.html
Frequentist/TRExFitter/CommonSystSmoothingTool/doc/latex/: annotated.tex  classPlotHist.tex  classSmoothHist.tex  classSmoothingTool.tex  doxygen.sty  refman.tex
Frequentist/TRExFitter/CommonSystSmoothingTool/python/: CopyHists.py  Ratio.py  multi-b-smoothing.py  testInputFile.py  testSmooth.py
Frequentist/TRExFitter/CommonSystSmoothingTool/util/: testInputFile.cxx  testSmooth.cxx
Frequentist/TRExFitter/Root/: Common.cc  ConfigParser.cc  ConfigReader.cc  ConfigReaderMulti.cc  CorrelationMatrix.cc  EFTProcessor.cc  FitResults.cc  FitUtils.cc  FittingTool.cc  HistoReader.cc  HistoTools.cc  LikelihoodScanManager.cc  LimitEvent.cc  LimitToys.cc  MultiFit.cc  NormFactor.cc  NtupleReader.cc  NuisParameter.cc  PruningUtil.cc  RankingManager.cc  Region.cc  Sample.cc  SampleHist.cc  ShapeFactor.cc  StatusLogbook.cc  Systematic.cc  SystematicHist.cc  TRExFit.cc  TRExPlot.cc  TruthSample.cc  UnfoldingSample.cc  UnfoldingSystematic.cc  YamlConverter.cc
Frequentist/TRExFitter/TRExFitter/: Common.h  ConfigParser.h  ConfigReader.h  ConfigReaderMulti.h  CorrelationMatrix.h  EFTProcessor.h  FitResults.h  FitUtils.h  FittingTool.h  HistoReader.h  HistoTools.h  LikelihoodScanManager.h  LimitEvent.h  LimitToys.h  MultiFit.h  NormFactor.h  NtupleReader.h  NuisParameter.h  PruningUtil.h  RankingManager.h  Region.h  Sample.h  SampleHist.h  ShapeFactor.h  StatusLogbook.h  Systematic.h  SystematicHist.h  TRExFit.h  TRExPlot.h  TruthSample.h  UnfoldingSample.h  UnfoldingSystematic.h  YamlConverter.h
Frequentist/TRExFitter/config/: EFTREx_ttWjTEST.config  ExampleMorphing.config  ExampleUnfolding.config  FitExampleUnfolding_expression.config  dataDriven.config  myFit.config  myFitStatOnly.config  myStatOnlyFit.config  myTopWS.config  myTopWS_multifit.config  ttH2015.config  ttH2015_comb.config  ttH2015_dilep.config  ttH2015_ljets.config  ttH2015_multifit_CRvsSR.config  ttH2015_test1.config  ttH2015_test2.config  ttH_tutorial.config  ttHbbLjetBase.config  ttHbbNTupleEx.config  ttZ3l_example.config
Frequentist/TRExFitter/docs/: faq.md  index.md  settings.md  setup.md
Frequentist/TRExFitter/docs/advanced_topics/: interference.md  likelihood.md  minimisation.md
Frequentist/TRExFitter/docs/fit_problems/: checks.md  introduction.md  problems.md
Frequentist/TRExFitter/docs/inference/: grouped_impact.md  limit.md  multi_POI.md  multifit.md  ranking.md  significance.md
Frequentist/TRExFitter/docs/interfacing_tools/: hepdata.md  pyhf.md  servicex.md
Frequentist/TRExFitter/docs/model_building/: cl_options.md  envelope.md  expression.md  morphing.md  shape.md
Frequentist/TRExFitter/docs/model_studies/: compatibility.md  decorrelation.md  gof.md  injecting_nps.md  mixed.md  remove_constraint.md
Frequentist/TRExFitter/docs/tutorials/: short_walkthrough.md  unfolding.md
Frequentist/TRExFitter/macros/: MuComparisons.cxx  makeDataDriven.py  run.py  runDataDrivenExample.py  tableToLatex.sh
Frequentist/TRExFitter/test/configs/: FitExample.config  FitExampleExpression.config  FitExampleInterferenceOffset.config  FitExampleMorphMultifit.config  FitExampleMorphing.config  FitExampleMorphingDilep.config  FitExampleNtuple.config  FitExampleNtupleAllSteps.config  FitExampleStatOnly.config  FitExampleUnfolding.config
Frequentist/TRExFitter/test/logs/FitExample/: LOG_d  LOG_f  LOG_h  LOG_l  LOG_p  LOG_r  LOG_s  LOG_w
Frequentist/TRExFitter/test/logs/FitExampleMorphMultifit/: LOG_MORPH_MULTI_f  LOG_MORPH_MULTI_w
Frequentist/TRExFitter/test/logs/FitExampleMorphing/: LOG_MORPH_d  LOG_MORPH_f  LOG_MORPH_h  LOG_MORPH_p  LOG_MORPH_w
Frequentist/TRExFitter/test/logs/FitExampleMorphingDilep/: LOG_MORPH_DILEP_d  LOG_MORPH_DILEP_f  LOG_MORPH_DILEP_h  LOG_MORPH_DILEP_p  LOG_MORPH_DILEP_w
Frequentist/TRExFitter/test/logs/FitExampleNtuple/: LOG_NTUPLE_b  LOG_NTUPLE_d  LOG_NTUPLE_f  LOG_NTUPLE_i  LOG_NTUPLE_n  LOG_NTUPLE_p  LOG_NTUPLE_w
Frequentist/TRExFitter/test/scripts/: cpd_output.sh  cppcheck_output.sh  dump_log_files.sh
Frequentist/TRExFitter/util/: BootstrapDefault.cc  CalculateCompatibility.py  asetup-CMakeLists.txt  hupdate.cc  trex-fitter.cc
(+139 files in other folders)
